--- a/OpenMVG_BA/.cproject
+++ b/OpenMVG_BA/.cproject
@@ -65,12 +65,12 @@
 									<listOptionValue builtIn="false" value="openMVG_lInftyComputerVision"/>
 									<listOptionValue builtIn="false" value="openMVG_system"/>
 									<listOptionValue builtIn="false" value="openMVG_image"/>
-									<listOptionValue builtIn="false" value="opencv_flann"/>
-									<listOptionValue builtIn="false" value="opencv_xfeatures2d"/>
-									<listOptionValue builtIn="false" value="opencv_features2d"/>
-									<listOptionValue builtIn="false" value="opencv_imgcodecs"/>
-									<listOptionValue builtIn="false" value="opencv_highgui"/>
-									<listOptionValue builtIn="false" value="opencv_core"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_flann.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_xfeatures2d.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_features2d.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_imgcodecs.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_highgui.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_core.so.3.0"/>
 									<listOptionValue builtIn="false" value="openMVG_kvld"/>
 									<listOptionValue builtIn="false" value="stlplus"/>
 									<listOptionValue builtIn="false" value="ceres"/>
@@ -171,12 +171,12 @@
 									<listOptionValue builtIn="false" value="openMVG_lInftyComputerVision"/>
 									<listOptionValue builtIn="false" value="openMVG_system"/>
 									<listOptionValue builtIn="false" value="openMVG_image"/>
-									<listOptionValue builtIn="false" value="opencv_flann"/>
-									<listOptionValue builtIn="false" value="opencv_xfeatures2d"/>
-									<listOptionValue builtIn="false" value="opencv_features2d"/>
-									<listOptionValue builtIn="false" value="opencv_imgcodecs"/>
-									<listOptionValue builtIn="false" value="opencv_highgui"/>
-									<listOptionValue builtIn="false" value="opencv_core"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_flann.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_xfeatures2d.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_features2d.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_imgcodecs.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_highgui.so.3.0"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value=":libopencv_core.so.3.0"/>									
 									<listOptionValue builtIn="false" value="openMVG_kvld"/>
 									<listOptionValue builtIn="false" value="stlplus"/>
 									<listOptionValue builtIn="false" value="ceres"/>
